realign game-board centrally in mobile view to avoid scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -109,7 +109,7 @@ div .display-counter span{
         display: flex;
         flex-direction: column;
         align-items: center;
-        transform: translateY(35%);
+        transform: translateY(30%);
     }
 
     .game-info{
